# knet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: linux.yml  windows.yml
bindings/: test.cpp
cmake/: Helpers.cmake
docker/: Base.Dockerfile  Dev.Dockerfile
include/: Example.hpp
src/: Example.cpp  main.cpp
test/unit_test/: CMakeLists.txt  ExampleTest.cpp
